[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/png/bonus.png" type="Texture" id=1]
[ext_resource path="res://assets/art/png/bonus_used.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/bonusBlock.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "used",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("blockSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.4
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("blockSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.375, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -30 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 35 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 34, 11.5 )

[node name="bonusBlock" type="StaticBody2D"]
collision_layer = 66
collision_mask = 49
script = ExtResource( 3 )

[node name="blockSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/hit = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="bottomChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape" type="CollisionShape2D" parent="bottomChecker"]
position = Vector2( 0, 26.5 )
shape = SubResource( 3 )

[connection signal="body_entered" from="bottomChecker" to="." method="_on_bottomChecker_body_entered"]
